--- a/css-404/style.css
+++ b/css-404/style.css
@@ -220,7 +220,7 @@ p {
 
 /* error */
 .error-page {
-	background: url(../images/wallpaper.jpg) no-repeat top;
+	background: url(https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/wallpaper.jpg) no-repeat top;
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
